# ChangeLog for www-plugins/noscript
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*noscript-2.6.8.14 (14 Feb 2014)

  14 Feb 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.8.13 (22 Jan 2014)

  22 Jan 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.8.12 (20 Jan 2014)

  20 Jan 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.8.11 (09 Jan 2014)

  09 Jan 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*noscript-2.6.8.10 (02 Jan 2014)

  02 Jan 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Clear ChangeLog