@@ -1,1 +1,1 @@
-DIST noscript-2.6.8.14.xpi 536255 SHA256 c0c089f994c71a8e504fa26fed9fbbb16dbd7e49d4bef2cf9bc6a2159ae5f073 SHA512 fb08f1b8ac43bb9080cf465834116e4807725fcd43ff68fef670c16f170298c1ff06d310295d6480c4e1d225725048d725632aff3f2022e26c90f85b703347c8 WHIRLPOOL 1aa4f49a6e23dc6b19657f5ecd7820e0d2bf1e1e85eac2ba7f2db62b40a0ac8896dd8c5cd815b7ef496633966f15f9e3d7785ab67e69b0d3db1df863c1070dac
+DIST noscript-2.6.8.15.xpi 537064 SHA256 354c05db869424ed101aaa35464db3e306a65193a6f4ea4282c1ce290304f9de SHA512 bd0c8ea05bd6396fc8cefeed565961375abe6896730de29395005192002e865d6447c085201636905dbc79a144dc82a65b4029a32e2e200c5338c42b230f19df WHIRLPOOL f433d0dfdfb7051366046fbdb13340899fc2de7f38c38a1e3491f8e008004d7ad1aef0e43ef8402f9be0b146eb941e5dfc0719e55d9ff3cd5113bf3f326f4bf0
