@@ -1,1 +1,1 @@
-DIST fvwm-crystal-3.3.0.tar.gz 4679680 SHA256 b7fad20964e78d9ed481fbc06efe467d6ecfaaef9de3b49cafe8191f114fb9bb SHA512 a1f417a224f3c45203fbb2844521437192a4e4fbfe9f90e871242266b336b427fc4cbd8dc9dc94c66e8da1f0d463f305379db753f85c101905b338e1245637ea WHIRLPOOL 8d694ff9b988dc0984339dfb7607c90caf1ed13e753457281039fd05958847bfe2049bfe6c9b36f76fe6c632ab5e6b482c8607829149ebccf471d26aaa7447ef
+DIST fvwm-crystal-3.3.2.tar.gz 4702096 SHA256 f0e5cd7b0a4920438229cf58a5854cc018d18fce982b42f250e624b15a1deb49 SHA512 0532aefd78c20ecdd51f01a734ae73d0c359e3afeab9838029613d4c44405a6c7b3d61b9581c4de0b7977ccaad7ea6353cf3e35b07c2940493560c7099581da7 WHIRLPOOL 9295e9d9c32f8961d522f378d176d3061a9461033cf9c2363034dac835b97f91757daacdaa83e1e601d064c34a68d0c70a280d79e86a4b167df347deeddc2973
