@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fvwm-crystal-3.3.2 (23 Jan 2014)
+
+  23 Jan 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *fvwm-crystal-3.3.0-r1 (24 Jan 2014)
 
   24 Jan 2014; Martin Väth <martin@mvath.de>:
