@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.8.15 (24 Feb 2014)
+
+  24 Feb 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *noscript-2.6.8.14 (14 Feb 2014)
 
   14 Feb 2014; Martin Väth <martin@mvath.de>:
